# roselab-perception

./: .gitignore  LICENSE  README.md  requirements.txt
data/: test.csv
reference/OptitrackPoseEval/: README  requirements_rerun.txt
reference/OptitrackPoseEval/src/: RH_HISTORY_RERUN_SETUP  eval.py
ros/src/mastcam_pointcloud/: package.xml  setup.cfg  setup.py
ros/src/mastcam_pointcloud/mastcam_pointcloud/: mastcam_pointcloud_node.py
ros/src/realsense_bag_recorder_cpp/: CMakeLists.txt  package.xml
ros/src/realsense_bag_recorder_cpp/src/: bag_recorder_service.cpp
ros/src/realsense_bag_recorder_cpp/srv/: RecordBag.srv
src/: SceneVisualizer.py  characterize_surface.py  converter.py  dem_compare.py  filter_and_downsample.py  latest_lidar_viz.sh  mesher.py  origin_fusion.py  pointcloud_transformer.py  pose_utils.py  surface_characterization.sh  transform_lidar.py  trial_analyzer.sh  viewer.py
